--- a/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQJudgmentQuestionView.xib
+++ b/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQJudgmentQuestionView.xib
@@ -72,7 +72,7 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jNA-fN-xQU">
+                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jNA-fN-xQU">
                             <rect key="frame" x="0.0" y="0.0" width="150" height="46.5"/>
                             <constraints>
                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="AaG-6h-NPL"/>
