--- a/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQShortAnswerQuestionsV.xib
+++ b/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQShortAnswerQuestionsV.xib
@@ -21,7 +21,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bWJ-1z-bpv">
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bWJ-1z-bpv" customClass="SJTextView">
                     <rect key="frame" x="74" y="20" width="257" height="228"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -39,7 +39,7 @@
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="shortAnswerTextView" destination="bWJ-1z-bpv" id="Ej8-oC-Z0c"/>
+                <outlet property="shortAnswerTextView" destination="bWJ-1z-bpv" id="uax-e6-nbs"/>
             </connections>
             <point key="canvasLocation" x="-150.5" y="-162"/>
         </view>
