知识库的培训部分的接口的调试,测试调通ok;

--- a/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQStudyDetailCell.xib
+++ b/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/View/YQStudyDetailCell.xib
@@ -37,7 +37,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lme-ab-jUD">
+                            <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lme-ab-jUD">
                                 <rect key="frame" x="111" y="25" width="321" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="bXV-Cw-uB9"/>
