--- a/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/ViewController/YQEditTextVC.xib
+++ b/OpticalValleyUnite/Classes/UI/KnowledgeLibrary/ViewController/YQEditTextVC.xib
@@ -23,6 +23,9 @@
                 <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8tv-WT-Eny">
                     <rect key="frame" x="0.0" y="0.0" width="285" height="472"/>
                     <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="urW-cZ-4Vb"/>
+                    </connections>
                 </webView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
